// Copyright: Ankitects Pty Ltd and contributors
// License: GNU AGPL, version 3 or later; http://www.gnu.org/licenses/agpl.html

syntax = "proto3";

option java_multiple_files = true;

package anki.image_occlusion;

import "anki/cards.proto";
import "anki/collection.proto";
import "anki/notes.proto";
import "anki/generic.proto";

service ImageOcclusionService {
  rpc GetImageClozeMetadata(ImageClozeMetadataRequest) returns (ImageClozeMetadata);
  rpc AddImageOcclusionNotes(AddImageOcclusionNotesRequest) returns (collection.OpChanges);
}

message ImageClozeMetadataRequest {
  string path = 1;
}

message ImageClozeMetadata {
  bytes data = 1;
  string name = 2;
  int64 deck_id = 3;
}

message AddImageOcclusionNotesRequest {
  string image_path = 1;
  int64 deck_id = 2;
  string occlusions = 3;
  string header = 4;
  string notes = 5;
  repeated string tags = 6;
}